--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from text_processor2 import *\n"
+    "from text_processor import *\n"
    ]
   },
   {
@@ -121,75 +121,6 @@
     "        return np.array(rootX), np.array(target_inX), np.array(featX), np.array(y)\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dg2 = DataGen()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(dg2.word_sim('leofii', 'leosgg')) \n",
-    "# print(int2char)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gen = dg2.gen(batch_size=100, n_batches=10)\n",
-    "# for i in range(200):\n",
-    "#     X1, X2, X3, y = next(gen)\n",
-    "# #     print(i, X1[0][0])\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dg2.word2vec(' leo', 6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
