--- a/models.ipynb
+++ b/models.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\leo\\appdata\\local\\conda\\conda\\envs\\gpu-tf\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "c:\\users\\amany\\appdata\\local\\conda\\conda\\envs\\gputf3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
@@ -159,17 +159,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train, infenc, infdec = seq2(27, 27, 29, 64,128)\n",
-    "# train.summary()\n",
-    "# train.input[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -209,52 +198,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conv_model2(n_input, n_output, n_feature, n_enc_units, n_dec_units, feat_units = 10):\n",
+    "    root_word_input = Input(shape=(15, 28, 1), name=\"root_word_input\")\n",
+    "    feature_input = Input(shape=(n_feature,), name=\"word_feature_input\")\n",
+    "    \n",
+    "    x = Conv2D(16, (3, 3), padding='same', activation='relu')(root_word_input)\n",
+    "    feat_out = Dense(feat_units, activation=\"relu\", name=\"feature_output\")(feature_input)\n",
+    "    x = MaxPooling2D(2, 2)(x)\n",
+    "    flat_output = Flatten()(x)\n",
+    "#     x = Dense(100, activation='relu')(flat_output)\n",
+    "    x = Dense(n_dec_units - feat_units, activation='relu')(flat_output)\n",
+    "#     state_h = Dropout(.4)(state_h)\n",
+    "    \n",
+    "    state_h = Concatenate()([x, feat_out])\n",
+    "    decoder_inputs = Input(shape=(None, n_output), name=\"target_word_input\")\n",
+    "    decoder_gru = GRU(n_dec_units, return_sequences=True, return_state=True, name=\"decoder_gru\")\n",
+    "    decoder_outputs, _= decoder_gru(decoder_inputs, initial_state=state_h)\n",
+    "    \n",
+    "    decoder_dense = Dense(n_output, activation='softmax', name=\"train_output\")\n",
+    "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "    \n",
+    "    model = Model([root_word_input, decoder_inputs, feature_input], decoder_outputs)\n",
+    "    encoder_model = Model([root_word_input, feature_input], state_h)\n",
+    "    \n",
+    "    decoder_state_input_h = Input(shape=(n_dec_units,))\n",
+    "    decoder_outputs, state_h= decoder_gru(decoder_inputs, initial_state=decoder_state_input_h)\n",
+    "\n",
+    "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "    decoder_model = Model([decoder_inputs, decoder_state_input_h], [decoder_outputs, state_h])\n",
+    "\n",
+    "    return model, encoder_model, decoder_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conv_model3(n_input, n_output, n_feature, n_enc_units, n_dec_units, feat_units = 10):\n",
+    "    root_word_input = Input(shape=(15, 28, 1), name=\"root_word_input\")\n",
+    "    feature_input = Input(shape=(n_feature,), name=\"word_feature_input\")\n",
+    "    \n",
+    "    x = Conv2D(16, (3, 3), padding='same', activation='relu')(root_word_input)\n",
+    "    feat_out = Dense(feat_units, activation=\"relu\", name=\"feature_output\")(feature_input)\n",
+    "    x = MaxPooling2D(2, 2)(x)\n",
+    "    flat_output = Flatten()(x)\n",
+    "#     x = Dense(100, activation='relu')(flat_output)\n",
+    "    x = Dense(n_dec_units - feat_units, activation='relu')(flat_output)\n",
+    "#     state_h = Dropout(.4)(state_h)\n",
+    "    \n",
+    "    state_h = Concatenate()([x, feat_out])\n",
+    "    decoder_inputs = Input(shape=(None, n_output), name=\"target_word_input\")\n",
+    "    x_decode, _ = GRU(n_dec_units, initial_state=state_h, return_sequences=True, return_state=True, name=\"decoder_gru_1\")(decoder_inputs)\n",
+    "    decoder_gru = GRU(n_dec_units, return_sequences=True, return_state=True, name=\"decoder_gru\")\n",
+    "    decoder_outputs, _= decoder_gru(x_decode, initial_state=state_h)\n",
+    "    \n",
+    "    decoder_dense = Dense(n_output, activation='softmax', name=\"train_output\")\n",
+    "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "    \n",
+    "    model = Model([root_word_input, decoder_inputs, feature_input], decoder_outputs)\n",
+    "    encoder_model = Model([root_word_input, feature_input], state_h)\n",
+    "    \n",
+    "    decoder_state_input_h = Input(shape=(n_dec_units,))\n",
+    "    x_decode = GRU(n_dec_units, initial_state=decoder_state_input_h, name=\"decoder_gru_1\")(decoder_inputs)\n",
+    "    decoder_outputs, state_h= decoder_gru(x_decode, initial_state=decoder_state_input_h)\n",
+    "    decoder_outputs, state_h= decoder_gru(decoder_inputs, initial_state=decoder_state_input_h)\n",
+    "\n",
+    "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "    decoder_model = Model([decoder_inputs, decoder_state_input_h], [decoder_outputs, state_h])\n",
+    "\n",
+    "    return model, encoder_model, decoder_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "root_word_input (InputLayer)    (None, 15, 28, 1)    0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_2 (Conv2D)               (None, 15, 28, 16)   160         root_word_input[0][0]            \n",
-      "__________________________________________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2D)  (None, 7, 14, 16)    0           conv2d_2[0][0]                   \n",
-      "__________________________________________________________________________________________________\n",
-      "flatten_2 (Flatten)             (None, 1568)         0           max_pooling2d_2[0][0]            \n",
-      "__________________________________________________________________________________________________\n",
-      "word_feature_input (InputLayer) (None, 29)           0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 100)          156900      flatten_2[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "feature_output (Dense)          (None, 10)           300         word_feature_input[0][0]         \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 110)          0           dense_2[0][0]                    \n",
-      "                                                                 feature_output[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "target_word_input (InputLayer)  (None, None, 27)     0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                 (None, 128)          14208       concatenate_2[0][0]              \n",
-      "__________________________________________________________________________________________________\n",
-      "decoder_lstm (GRU)              [(None, None, 128),  59904       target_word_input[0][0]          \n",
-      "                                                                 dense_3[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "train_output (Dense)            (None, None, 27)     3483        decoder_lstm[0][0]               \n",
-      "==================================================================================================\n",
-      "Total params: 234,955\n",
-      "Trainable params: 234,955\n",
-      "Non-trainable params: 0\n",
-      "__________________________________________________________________________________________________\n"
+     "ename": "TypeError",
+     "evalue": "('Keyword argument not understood:', 'initial_state')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-7ef900f7f6f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minfenc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minfdec\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconv_model3\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m27\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m27\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m29\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m64\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m128\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-6-0b10b774013f>\u001b[0m in \u001b[0;36mconv_model3\u001b[1;34m(n_input, n_output, n_feature, n_enc_units, n_dec_units, feat_units)\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mstate_h\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mConcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeat_out\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mdecoder_inputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mInput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_output\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"target_word_input\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mx_decode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGRU\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_dec_units\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minitial_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstate_h\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_sequences\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"decoder_gru_1\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdecoder_inputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[0mdecoder_gru\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGRU\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_dec_units\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_sequences\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreturn_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"decoder_gru\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0mdecoder_outputs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdecoder_gru\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_decode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minitial_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstate_h\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\amany\\appdata\\local\\conda\\conda\\envs\\gputf3\\lib\\site-packages\\keras\\legacy\\interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     89\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[0;32m     90\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[1;32m---> 91\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     92\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\amany\\appdata\\local\\conda\\conda\\envs\\gputf3\\lib\\site-packages\\keras\\layers\\recurrent.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, units, activation, recurrent_activation, use_bias, kernel_initializer, recurrent_initializer, bias_initializer, kernel_regularizer, recurrent_regularizer, bias_regularizer, activity_regularizer, kernel_constraint, recurrent_constraint, bias_constraint, dropout, recurrent_dropout, implementation, return_sequences, return_state, go_backwards, stateful, unroll, reset_after, **kwargs)\u001b[0m\n\u001b[0;32m   1578\u001b[0m                                   \u001b[0mstateful\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstateful\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1579\u001b[0m                                   \u001b[0munroll\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0munroll\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1580\u001b[1;33m                                   **kwargs)\n\u001b[0m\u001b[0;32m   1581\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactivity_regularizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregularizers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactivity_regularizer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1582\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\amany\\appdata\\local\\conda\\conda\\envs\\gputf3\\lib\\site-packages\\keras\\layers\\recurrent.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, cell, return_sequences, return_state, go_backwards, stateful, unroll, **kwargs)\u001b[0m\n\u001b[0;32m    378\u001b[0m                              \u001b[1;34m'(tuple of integers, '\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    379\u001b[0m                              'one integer per RNN state).')\n\u001b[1;32m--> 380\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRNN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    381\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcell\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcell\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    382\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreturn_sequences\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreturn_sequences\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\amany\\appdata\\local\\conda\\conda\\envs\\gputf3\\lib\\site-packages\\keras\\engine\\topology.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    291\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mkwarg\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    292\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mkwarg\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mallowed_kwargs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 293\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Keyword argument not understood:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwarg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    294\u001b[0m         \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    295\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: ('Keyword argument not understood:', 'initial_state')"
      ]
     }
    ],
    "source": [
-    "train, infenc, infdec = conv_model(27, 27, 29, 64,128)\n",
-    "train.summary()"
+    "# train, infenc, infdec = conv_model3(27, 27, 29, 64,128)\n",
+    "# train.summary()"
    ]
   },
   {
