edited the convolution layer

--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,9 @@
     "        vec = np.zeros((max_chars, self.n_chars))\n",
     "        for i in range(len(word)):\n",
     "            vec[i][char2int[word[i]]] = 1\n",
-    "        vec[len(word):, 1] = 1\n",
+    "        index_sps = char2int[' ']\n",
+    "#         print(index_sps)\n",
+    "        vec[len(word):, index_sps] = 1\n",
     "        return vec\n",
     "    \n",
     "    def char2vec(self, char):\n",
@@ -70,7 +72,7 @@
     "        root_word = list(root_word)\n",
     "        target_word = list(target_word)\n",
     "#         target_word.reverse()\n",
-    "        target_word_in = [\" \"] + target_word[:-1]\n",
+    "        target_word_in = [\"&\"] + target_word[:-1]\n",
     "        root_encoded = self.word2vec(root_word, self.max_root_len)\n",
     "        target_encoded = self.word2vec(target_word, self.max_output_len)\n",
     "        target_in_encoded = self.word2vec(target_word_in, self.max_output_len)\n",
@@ -121,6 +123,49 @@
     "        return np.array(rootX), np.array(target_inX), np.array(featX), np.array(y)\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dg = DataGen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['l', 'e', 'o', ' ', ' ', ' ', ' ', ' ', ' ', ' ']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dg.one_hot_decode(dg.word2vec(\"leo\", 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
