--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -23,7 +23,7 @@
     "        self.roots, self.words, self.featArray, mr, mw = get_feature_array()\n",
     "        self.n_chars = len(char2int)\n",
     "        self.max_root_len = mr\n",
-    "        self.max_output_len = mw\n",
+    "        self.max_output_len = mw + 2\n",
     "        self.word_feat_len = len(self.featArray[0])\n",
     "\n",
     "    def gen2(self, batch_size=100, n_batches=-1, trainset=True):\n",
@@ -70,9 +70,9 @@
     "    \n",
     "    def encond_input_output(self, root_word, target_word):\n",
     "        root_word = list(root_word)\n",
-    "        target_word = list(target_word)\n",
+    "        target_word = list(target_word) + ['&']\n",
     "#         target_word.reverse()\n",
-    "        target_word_in = [\"&\"] + target_word[:-1]\n",
+    "        target_woderd_in = [\"&\"] + target_word#[:-1]\n",
     "        root_encoded = self.word2vec(root_word, self.max_root_len)\n",
     "        target_encoded = self.word2vec(target_word, self.max_output_len)\n",
     "        target_in_encoded = self.word2vec(target_word_in, self.max_output_len)\n",
