best model and attribute prediction

--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "class DataGen:\n",
     "\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        self.roots, self.words, self.featArray, mr, mw = get_feature_array()\n",
+    "    def __init__(self, reverse=False, *args, **kwargs):\n",
+    "        if reverse:\n",
+    "            self.roots, self.words, self.featArray, mr, mw, n_features = get_reverse_feature_array()\n",
+    "            self.n_features = n_features\n",
+    "            self.pred_feat_shapes = []\n",
+    "            for feat in self.featArray[0]:\n",
+    "                self.pred_feat_shapes.append(len(feat))\n",
+    "        else:\n",
+    "            self.roots, self.words, self.featArray, mr, mw = get_feature_array()\n",
+    "            self.word_feat_len = len(self.featArray[0])\n",
     "        self.n_chars = len(char2int)\n",
     "        self.max_root_len = mr\n",
     "        self.max_output_len = mw + 2\n",
-    "        self.word_feat_len = len(self.featArray[0])\n",
+    "        \n",
     "\n",
     "    def gen2(self, batch_size=100, n_batches=-1, trainset=True):\n",
     "        max_batch, min_batch = 0, 0\n",
@@ -52,6 +60,40 @@
     "            batch += 1\n",
     "            if batch == total_batchs or batch == n_batches:\n",
     "                batch = min_batch\n",
+    "                \n",
+    "    def gen_rev(self, batch_size=100, n_batches=-1, trainset=True):\n",
+    "        max_batch, min_batch = 0, 0\n",
+    "        if trainset == True:\n",
+    "            max_batch = int(len(self.words) * .7) / batch_size\n",
+    "            min_batch = 0\n",
+    "        else:\n",
+    "            max_batch = len(self.words)/ batch_size\n",
+    "            min_batch = int(len(self.words) * .7 / batch_size)\n",
+    "        \n",
+    "        total_batchs = max_batch\n",
+    "        batch = min_batch\n",
+    "        preds = []\n",
+    "        for s in self.pred_feat_shapes:\n",
+    "            preds.append(np.zeros((batch_size, s)))\n",
+    "            \n",
+    "        while True:\n",
+    "            y_index = 0\n",
+    "            rootX, tagrteX, y = list(), list(), list()\n",
+    "            for i in range(batch * batch_size, (1 + batch) * batch_size):\n",
+    "                root = self.roots[i]\n",
+    "                word = self.words[i]\n",
+    "                word_feature = self.featArray[i]\n",
+    "                root_encoded, target_encoded = self.encond_rev_input_output(root, word)\n",
+    "                for j in range(len(self.pred_feat_shapes)):\n",
+    "                    preds[j][y_index] = word_feature[j] \n",
+    "#                 rootX.append(root_encoded.reshape((root_encoded.shape[0], root_encoded.shape[1], 1)))\n",
+    "                tagrteX.append(target_encoded.reshape((target_encoded.shape[0], target_encoded.shape[1], 1)))\n",
+    "#                 y.append(word_feature)\n",
+    "                y_index += 1\n",
+    "            yield np.array(tagrteX), preds\n",
+    "            batch += 1\n",
+    "            if batch == total_batchs or batch == n_batches:\n",
+    "                batch = min_batch\n",
     "\n",
     "\n",
     "    def word2vec(self, word, max_chars):\n",
@@ -59,7 +101,6 @@
     "        for i in range(len(word)):\n",
     "            vec[i][char2int[word[i]]] = 1\n",
     "        index_sps = char2int[' ']\n",
-    "#         print(index_sps)\n",
     "        vec[len(word):, index_sps] = 1\n",
     "        return vec\n",
     "    \n",
@@ -71,12 +112,19 @@
     "    def encond_input_output(self, root_word, target_word):\n",
     "        root_word = list(root_word)\n",
     "        target_word = list(target_word) + ['&']\n",
-    "#         target_word.reverse()\n",
-    "        target_woderd_in = [\"&\"] + target_word#[:-1]\n",
+    "        target_word_in = [\"&\"] + target_word#[:-1]\n",
     "        root_encoded = self.word2vec(root_word, self.max_root_len)\n",
     "        target_encoded = self.word2vec(target_word, self.max_output_len)\n",
     "        target_in_encoded = self.word2vec(target_word_in, self.max_output_len)\n",
     "        return root_encoded, target_encoded, target_in_encoded\n",
+    "    \n",
+    "    def encond_rev_input_output(self, root_word, target_word):\n",
+    "        root_word = list(root_word)\n",
+    "        target_word = list(target_word) + ['&']\n",
+    "        target_word_in = [\"&\"] + target_word#[:-1]\n",
+    "        root_encoded = self.word2vec(root_word, self.max_root_len)\n",
+    "        target_encoded = self.word2vec(target_word, self.max_output_len)\n",
+    "        return root_encoded, target_encoded\n",
     "\n",
     "        \n",
     "    def one_hot_decode(self, vec):\n",
@@ -105,7 +153,7 @@
     "            j += 1\n",
     "            if j == n: break\n",
     "        return np.array(rootX), np.array(target_inX), np.array(featX), np.array(y)\n",
-    "            \n",
+    "             \n",
     "    def get_dataset2(self, n=100):\n",
     "        j = 0\n",
     "        rootX, target_inX, featX, y = list(), list(), list(), list()\n",
@@ -120,52 +168,53 @@
     "            y.append(target_encoded)\n",
     "            j += 1\n",
     "            if j == n: break\n",
-    "        return np.array(rootX), np.array(target_inX), np.array(featX), np.array(y)\n",
+    "        return np.array(rootX).reshape((batch_size, 15, 28)), np.array(target_inX), np.array(featX), np.array(y)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dg = DataGen()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "[3, 3, 4, 4, 4, 3, 3, 3, 3, 3, 3, 3, 3, 5, 5, 5, 5, 3, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['l', 'e', 'o', ' ', ' ', ' ', ' ', ' ', ' ', ' ']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# dg.one_hot_decode(dg.word2vec(\"leo\", 10))"
+    "# dg = DataGen(reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# gen = dg.gen_rev(batch_size=8, n_batches=-1, trainset=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [x1, x2], y = next(gen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y[0]"
+   ]
   }
  ],
  "metadata": {
