--- a/models.ipynb
+++ b/models.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\leo\\appdata\\local\\conda\\conda\\envs\\gpu-tf\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
@@ -26,7 +16,7 @@
     "from keras.models import Model\n",
     "from keras.optimizers import Adam\n",
     "from keras.optimizers import RMSprop\n",
-    "# from keras.utils.vis_utils import plot_model\n",
+    "from keras.utils.vis_utils import plot_model\n",
     "import keras\n",
     "\n",
     "# returns train, inference_encoder and inference_decoder models\n",
@@ -72,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +158,13 @@
     "    feature_input = Input(shape=(n_feature,), name=\"word_feature_input\")\n",
     "    feat_out = Dense(feat_units, activation=\"relu\", name=\"feature_output\")(feature_input)\n",
     "    \n",
-    "    x = Conv2D(16, (3, 3), padding='same', activation='relu')(root_word_input)\n",
-    "    x = MaxPooling2D(2, 2)(x)\n",
-    "    x = Conv2D(8, (3, 3), padding='same', activation='relu')(x)\n",
-    "    x = MaxPooling2D(2, 2)(x)\n",
-    "    \n",
+    "    x = Conv2D(32, (5, 5), padding='same', activation='relu')(root_word_input)\n",
+    "    x = MaxPooling2D(3, 3)(x)\n",
+    "\n",
     "    flat_output = Flatten()(x)\n",
-    "    x = Concatenate()([flat_output, feat_out])\n",
-    "#     x = Dense(n_dec_units * 2, activation='relu')(flat_output)\n",
+    "    x = Dense(n_dec_units - feat_units, activation='relu')(flat_output)\n",
     "    \n",
-    "    state_h = Dense(n_dec_units, activation='relu')(x)\n",
+    "    state_h = Concatenate()([x, feat_out])\n",
     "    \n",
     "    decoder_inputs = Input(shape=(None, n_output), name=\"target_word_input\")\n",
     "    decoder_gru = GRU(n_dec_units, return_sequences=True, return_state=True, name=\"decoder_gru\")\n",
@@ -200,7 +187,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rnn_model(n_input, n_output, n_feature, n_enc_units, n_dec_units, feat_units = 10):\n",
+    "    root_word_input = Input(shape=(None, n_input), name=\"root_word_input\")\n",
+    "    feature_input = Input(shape=(n_feature,), name=\"word_feature_input\")\n",
+    "    feat_out = Dense(5, activation=\"relu\", name=\"feature_output\")(feature_input)\n",
+    "    \n",
+    "    encoder = GRU(n_dec_units, return_state=True, name=\"encoder_gru\")\n",
+    "    result, state_h = encoder(root_word_input)\n",
+    "\n",
+    "#     flat_output = Flatten()(x)\n",
+    "    x = Concatenate()([state_h, feat_out])\n",
+    "#     x = Dense(n_dec_units * 2, activation='relu')(flat_output)\n",
+    "    \n",
+    "    state_h = Dense(n_dec_units, activation='linear')(x)\n",
+    "    \n",
+    "    decoder_inputs = Input(shape=(None, n_output), name=\"target_word_input\")\n",
+    "    decoder_gru = GRU(n_dec_units, return_sequences=True, return_state=True, name=\"decoder_gru\")\n",
+    "    decoder_outputs, _= decoder_gru(decoder_inputs, initial_state=state_h)\n",
+    "    \n",
+    "    decoder_dense = Dense(n_output, activation='softmax', name=\"train_output\")\n",
+    "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "    \n",
+    "    model = Model([root_word_input, decoder_inputs, feature_input], decoder_outputs)\n",
+    "    encoder_model = Model([root_word_input, feature_input], state_h)\n",
+    "    \n",
+    "    decoder_state_input_h = Input(shape=(n_dec_units,))\n",
+    "    decoder_outputs, state_h= decoder_gru(decoder_inputs, initial_state=decoder_state_input_h)\n",
+    "\n",
+    "    decoder_outputs = decoder_dense(decoder_outputs)\n",
+    "    decoder_model = Model([decoder_inputs, decoder_state_input_h], [decoder_outputs, state_h])\n",
+    "\n",
+    "    return model, encoder_model, decoder_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,50 +305,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "root_word_input (InputLayer)    (None, 15, 28, 1)    0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "conv2d_13 (Conv2D)              (None, 15, 28, 16)   160         root_word_input[0][0]            \n",
-      "__________________________________________________________________________________________________\n",
-      "max_pooling2d_13 (MaxPooling2D) (None, 7, 14, 16)    0           conv2d_13[0][0]                  \n",
-      "__________________________________________________________________________________________________\n",
-      "flatten_10 (Flatten)            (None, 1568)         0           max_pooling2d_13[0][0]           \n",
-      "__________________________________________________________________________________________________\n",
-      "word_feature_input (InputLayer) (None, 29)           0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_17 (Dense)                (None, 54)           84726       flatten_10[0][0]                 \n",
-      "__________________________________________________________________________________________________\n",
-      "feature_output (Dense)          (None, 10)           300         word_feature_input[0][0]         \n",
-      "__________________________________________________________________________________________________\n",
-      "target_word_input (InputLayer)  (None, None, 27)     0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "concatenate_10 (Concatenate)    (None, 64)           0           dense_17[0][0]                   \n",
-      "                                                                 feature_output[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "decoder_gru (GRU)               [(None, None, 64), ( 17664       target_word_input[0][0]          \n",
-      "                                                                 concatenate_10[0][0]             \n",
-      "__________________________________________________________________________________________________\n",
-      "train_output (Dense)            (None, None, 27)     1755        decoder_gru[0][0]                \n",
-      "==================================================================================================\n",
-      "Total params: 104,605\n",
-      "Trainable params: 104,605\n",
-      "Non-trainable params: 0\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train, infenc, infdec = conv_model(27, 27, 29, 64,64)\n",
-    "train.summary()"
+    "# train, infenc, infdec = conv_model(27, 27, 29, 64,64)\n",
+    "# train.summary()"
    ]
   },
   {
@@ -342,11 +330,11 @@
     "    output = list()\n",
     "    for t in range(n_steps):\n",
     "        # predict next char\n",
-    "        yhat, h, c = infdec.predict([target_seq] + state)\n",
+    "        yhat, h = infdec.predict([target_seq, state])\n",
     "        # store prediction\n",
     "        output.append(yhat[0,0,:])\n",
     "        # update state\n",
-    "        state = [h, c]\n",
+    "        state = he\n",
     "        # update target sequence\n",
     "        target_seq = yhat\n",
     "    return np.array(output)\n",
@@ -370,6 +358,82 @@
     "        # update target sequence\n",
     "        target_seq = yhat\n",
     "    return np.array(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverse_model(max_n_chars, max_word_width, embed_size, feat_preds):\n",
+    "#     root_word = Input(shape=(None, n_input), name=\"root_input\")\n",
+    "    target_word = Input(shape=(max_n_chars, max_word_width, 1), name=\"target_input\")\n",
+    "    x = Conv2D(16, (3, 3), padding='same', activation='relu')(target_word)\n",
+    "    x = MaxPooling2D(2, 2)(x)\n",
+    "    x = Flatten()(x)\n",
+    "    x = Dense(embed_size, activation='relu')(x)\n",
+    "    feature_preds = []\n",
+    "    for i in feat_preds:\n",
+    "        d = Dense(i, activation='softmax')(x)\n",
+    "        feature_preds.append(d)\n",
+    "    model = Model(target_word, feature_preds)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = reverse_model(20, [4, 2, 6], 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "target_input (InputLayer)       (None, 15, 28, 1)    0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_6 (Conv2D)               (None, 15, 28, 16)   160         target_input[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_5 (MaxPooling2D)  (None, 7, 14, 16)    0           conv2d_6[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_5 (Flatten)             (None, 1568)         0           max_pooling2d_5[0][0]            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_13 (Dense)                (None, 20)           31380       flatten_5[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_14 (Dense)                (None, 4)            84          dense_13[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_15 (Dense)                (None, 2)            42          dense_13[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_16 (Dense)                (None, 6)            126         dense_13[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 31,792\n",
+      "Trainable params: 31,792\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_model(model)"
    ]
   },
   {
