--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,33 @@
     "                word_feature = self.featArray[i]\n",
     "                root_encoded, target_encoded, target_in_encoded = self.encond_input_output(root, word)\n",
     "                rootX.append(root_encoded.reshape((root_encoded.shape[0], root_encoded.shape[1], 1)))\n",
+    "                target_inX.append(target_in_encoded)\n",
+    "                featX.append(word_feature)\n",
+    "                y.append(target_encoded)\n",
+    "            yield [np.array(rootX), np.array(target_inX), np.array(featX)], np.array(y)\n",
+    "            batch += 1\n",
+    "            if batch == total_batchs or batch == n_batches:\n",
+    "                batch = min_batch\n",
+    "                \n",
+    "    def gen_rnn(self, batch_size=100, n_batches=-1, trainset=True):\n",
+    "        max_batch, min_batch = 0, 0\n",
+    "        if trainset == True:\n",
+    "            max_batch = int(len(self.words) * .7) / batch_size\n",
+    "            min_batch = 0\n",
+    "        else:\n",
+    "            max_batch = len(self.words)/ batch_size\n",
+    "            min_batch = int(len(self.words) * .7 / batch_size)\n",
+    "        \n",
+    "        total_batchs = max_batch\n",
+    "        batch = min_batch\n",
+    "        while True:\n",
+    "            rootX, target_inX, featX, y = list(), list(), list(), list()\n",
+    "            for i in range(batch * batch_size, (1 + batch) * batch_size):\n",
+    "                root = self.roots[i]\n",
+    "                word = self.words[i]\n",
+    "                word_feature = self.featArray[i]\n",
+    "                root_encoded, target_encoded, target_in_encoded = self.encond_input_output(root, word)\n",
+    "                rootX.append(root_encoded.reshape((root_encoded.shape[0], root_encoded.shape[1])))\n",
     "                target_inX.append(target_in_encoded)\n",
     "                featX.append(word_feature)\n",
     "                y.append(target_encoded)\n",
@@ -154,7 +181,7 @@
     "            if j == n: break\n",
     "        return np.array(rootX), np.array(target_inX), np.array(featX), np.array(y)\n",
     "             \n",
-    "    def get_dataset2(self, n=100):\n",
+    "    def get_dataset2(self, batch_szie, n=100):\n",
     "        j = 0\n",
     "        rootX, target_inX, featX, y = list(), list(), list(), list()\n",
     "        for i in range(len(self.words)):\n",
