--- a/models.ipynb
+++ b/models.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\amany\\appdata\\local\\conda\\conda\\envs\\gputf3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
@@ -158,7 +168,7 @@
     "    feature_input = Input(shape=(n_feature,), name=\"word_feature_input\")\n",
     "    feat_out = Dense(feat_units, activation=\"relu\", name=\"feature_output\")(feature_input)\n",
     "    \n",
-    "    x = Conv2D(32, (5, 5), padding='same', activation='relu')(root_word_input)\n",
+    "    x = Conv2D(20, (5, 5), padding='same', activation='relu')(root_word_input)\n",
     "    x = MaxPooling2D(3, 3)(x)\n",
     "\n",
     "    flat_output = Flatten()(x)\n",
@@ -200,7 +210,7 @@
     "    result, state_h = encoder(root_word_input)\n",
     "\n",
     "#     flat_output = Flatten()(x)\n",
-    "    x = Concatenate()([state_h, feat_out])\n",
+    "    x = Concatenate()([result, feat_out])\n",
     "#     x = Dense(n_dec_units * 2, activation='relu')(flat_output)\n",
     "    \n",
     "    state_h = Dense(n_dec_units, activation='linear')(x)\n",
@@ -334,7 +344,7 @@
     "        # store prediction\n",
     "        output.append(yhat[0,0,:])\n",
     "        # update state\n",
-    "        state = he\n",
+    "        state = h\n",
     "        # update target sequence\n",
     "        target_seq = yhat\n",
     "    return np.array(output)\n",
